--- a/style.css
+++ b/style.css
@@ -1,18 +1,18 @@
 /* ------------------ROOT VARAIBLES --------------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 :root{
-    --color-primary: #7380ec;
+    --color-primary: #a1aaf4;
     --color-danger: #ff7782;
     --color-success: #41f1b6;
     --color-warning: #ffbb55;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-info-light: #dce1eb;
+    --color-white: #b2bbff;
+    --color-info-light: #7d8da1;
+    --color-info-dark: #dce1eb;
     --color-dark:#363949;
     --color-light: rgba(132, 139, 200, 0.18);
-    --color-primary-variant: #111e88;
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
+    --color-dark-variant: #111e88;
+    --color-primary-variant: #677483;
+    --color-background: #7380ec;
 
     --card-border-radius: 2rem;
     --border-radius-1: 0.4rem;
