--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --color-primary: #a1aaf4;
     --color-danger: #ff7782;
     --color-success: #41f1b6;
-    --color-warning: #ffbb55;
+    --color-warning: #fc0000;
     --color-white: #b2bbff;
     --color-info-light: #7d8da1;
     --color-info-dark: #dce1eb;
@@ -388,6 +388,8 @@ main table tbody td{
     height: 2.8rem;
     border-bottom: 1px solid var(--color-info-light);
     color: var(--color-dark-variant);
+    font-size: 15px;
+    font-weight: bold;
 }
 
 main table tbody tr:last-child td{
