--- a/style_add.css
+++ b/style_add.css
@@ -1,16 +1,16 @@
 :root{
-    --color-primary: #7380ec;
+    --color-primary: #a1aaf4;
     --color-danger: #ff7782;
     --color-success: #41f1b6;
     --color-warning: #ffbb55;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-info-light: #dce1eb;
+    --color-white: #b2bbff;
+    --color-info-light: #7d8da1;
+    --color-info-dark: #dce1eb;
     --color-dark:#363949;
     --color-light: rgba(132, 139, 200, 0.18);
-    --color-primary-variant: #111e88;
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
+    --color-dark-variant: #111e88;
+    --color-primary-variant: #677483;
+    --color-background: #7380ec;
 
     --card-border-radius: 2rem;
     --border-radius-1: 0.4rem;
@@ -79,6 +79,10 @@
     position: relative;
     width: 100%;
     height: 37px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 0px;
 }
 .wrapper .form .input_field .custom_select select{
     -webkit-appearance: none;
@@ -86,8 +90,8 @@
     border: 1px solid #d5dbd9;
     width: 100%;
     height: 100%;
-    padding: 8px 10px;
-    border-radius: 3px;
+    padding: 10px 15px;
+    border-radius: 15px;
     outline: none;
 }
 .wrapper .form .input_field .custom_select::before{
