profile picture dynamic add form modif

--- a/adminLogin/style.css
+++ b/adminLogin/style.css
@@ -1,41 +1,88 @@
-*{
+* {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
 }
-body{
+
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 250px;
     background: #396dce;
 }
-.container{
+
+.container {
     padding: 30px 25px;
     background: #fff;
     box-shadow: 1px 1px 0px 0px #c2c2c2;
     border-radius: 5px;
     min-height: 200px;
-    
+
+}
+.container .admin_details{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+
+.container .admin_details .profile {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+.welcome{
+    margin-bottom: 24px;
+}
+.container .admin_details h3{
+    color: green;
+}
+.container .settings{
+    display:  grid;
+    grid-template-columns: repeat(2, auto);
+    margin-top: 30px;
+}
+.container .settings .items{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 50px;
+    gap: 10px;
+    padding: 10px;
+    margin: 10px;
+    border:  solid 1px rgb(169, 248, 169);
+}
+.container .settings .items p{
+    font-size: 11px;
+}
+.container .settings .items span{
+    font-size: 40px;
+    color: green;
 }
 .container header,
-.container form{
+.container form {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
-.container .space{
+
+.container .space {
     background: #c2c2c2;
     height: 1px;
     width: 100%;
     margin-top: 15px;
 }
-.container h1{
+
+.container h1 {
     text-transform: capitalize;
     color: #333131;
 }
-.container .field{
+
+.container .field {
     display: flex;
     justify-content: space-between;
     align-items: left;
@@ -43,19 +90,22 @@ body{
     flex-direction: column;
     margin-top: 20px;
 }
-.container .field .input-field input{
+
+.container .field .input-field input {
     padding: 10px 20px;
     border-radius: 5px;
     width: 210px;
     border: 1px solid #c2c2c2;
     font-size: 16px;
-    outline-color:#396dce;
+    outline-color: #396dce;
 }
-.container .submit{
+
+.container .submit {
     margin-top: 30px;
     width: auto;
 }
-.container .submit input{
+
+.container .submit input {
     width: 100%;
     background: #396dce;
     color: #fff;
@@ -65,12 +115,26 @@ body{
     font-size: 15px;
     font-weight: 600;
 }
-.container .submit input:hover{
+
+.container .submit input:hover {
     opacity: 0.6;
 }
-.container .link{
+
+.container .link {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+}
+form input[type=submit]{
+    padding: 15px 20px;
+    background: #396dce;
+    color: white;
 }
